Bug 444980 - Resources > Workspaces: Workspace manager GUI doesn't warn about overwrite on initial load.
Summary: Resources > Workspaces: Workspace manager GUI doesn't warn about overwrite on...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Resource Management (other bugs)
Version First Reported In: 5.0.0-beta2
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Tiar
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-11-04 20:00 UTC by Emmet O'Neill
Modified: 2021-11-08 15:52 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Emmet O'Neill 2021-11-04 20:00:54 UTC
SUMMARY

If you set up a workspace, save it under a name, and then modify it, the workspace management GUI will not warn you that saving will overwrite an existing workspace when you first open it. 

Deleting a character from the name field and then retyping it will cause it to show the proper overwrite warning.

STEPS TO REPRODUCE
1. Set up a custom workspace.
2. Open workspace manager GUI.
3. Type a name and click save.
4. Modify your workspace again.
5. Open workspace manager GUI again.

OBSERVED RESULT

The button on the workspace manager GUI will say "save".

In order to see the "overwrite" message you have to delete and retype part of the name.

EXPECTED RESULT

The button on the workspace manager GUI should say "overwrite" right as the GUI first opens.

ADDITIONAL INFORMATION

krita/5.0 branch, resource testing day.
Comment 1 Tiar 2021-11-08 12:06:45 UTC
Git commit 8983b45a3619e1b8369d009508259dd392f587b0 by Agata Cacko.
Committed on 08/11/2021 at 12:04.
Pushed by tymond into branch 'master'.

Update the button in workspace chooser after saving a workspace

Before this commit, the button in workspace chooser didn't warn
about the potential overwrite after the user already saved a workspace,
despite that in such case it would perform overwrite.
This commit ensures the buttons are updated so they warn the user
properly.

M  +4    -0    libs/ui/widgets/kis_workspace_chooser.cpp

https://invent.kde.org/graphics/krita/commit/8983b45a3619e1b8369d009508259dd392f587b0
Comment 2 Tiar 2021-11-08 15:52:39 UTC
Git commit 9f8eeb404a93dfa1f2c9bd0e0f52f11f14bd6d30 by Agata Cacko.
Committed on 08/11/2021 at 15:49.
Pushed by tymond into branch 'krita/5.0'.

Update the button in workspace chooser after saving a workspace

Before this commit, the button in workspace chooser didn't warn
about the potential overwrite after the user already saved a workspace,
despite that in such case it would perform overwrite.
This commit ensures the buttons are updated so they warn the user
properly.

M  +4    -0    libs/ui/widgets/kis_workspace_chooser.cpp

https://invent.kde.org/graphics/krita/commit/9f8eeb404a93dfa1f2c9bd0e0f52f11f14bd6d30