Update the button in workspace chooser after saving a workspace

Before this commit, the button in workspace chooser didn't warn
about the potential overwrite after the user already saved a workspace,
despite that in such case it would perform overwrite.
This commit ensures the buttons are updated so they warn the user
properly.

BUG:444980